Added footer to other pages

--- a/webProject/css/footer.css
+++ b/webProject/css/footer.css
@@ -1,10 +1,13 @@
 footer{
-		position: absolute;
 		box-sizing: border-box;
 		bottom: 0px;
-		background-color: #ddd;
+    border-top: 1px solid #ddd;
 		width: 100%;
     padding: 5px;
+}
+
+body{
+		min-height: 100%;
 }
 
 #copyright{
