--- a/webProject/css/products.css
+++ b/webProject/css/products.css
@@ -1,17 +1,18 @@
-ul{
+ul.product-list{
 		display: flex;
 		flex-wrap: wrap;
 }
 
-li{
+ul.product-list li{
 		display: inline-block;
 		flex: auto;
     width: 35rem;
     height: 30rem;
     vertical-align: text-top;
+		overflow: hidden;
 }
 
-li a{
+ul.product-list li a{
 		color: #000;
     text-decoration: none;
 		display: inline-block;
@@ -20,10 +21,18 @@ li a{
     height: 100%;
 }
 
-li img{
+ul.product-list li img{
 		width: 15rem;
     height: 25rem;
 		margin: auto;
 		overflow: hidden;
 		display: block;
+}
+
+ul.product-list h2{
+    margin: 5px;
+}
+
+ul.product-list h6{
+    margin: 2px;
 }
